Adding missing dependencies for 2.1 spark usage

--- a/sparkcassandra-connector/pom.xml
+++ b/sparkcassandra-connector/pom.xml
@@ -25,6 +25,31 @@
                  </exclusion>
              </exclusions>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-catalyst_2.10</artifactId>
+            <version>${spark.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-sql_${scala.binary.version}</artifactId>
+            <version>2.1.1</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.parquet</groupId>
+                    <artifactId>parquet-hadoop-bundle</artifactId>
+                </exclusion>
+
+                <exclusion>
+                    <groupId>org.apache.parquet</groupId>
+                    <artifactId>parquet-column</artifactId>
+                </exclusion>
+            </exclusions>
+
+        </dependency>
+
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
@@ -54,6 +79,8 @@
             <scope>test</scope>
             <version>${trapezium.version}</version>
         </dependency>
+
+
 
         <dependency>
             <groupId>com.verizon.bda</groupId>
