Test is  fixed - Usage of readFullDataSet is set properly.

--- a/simulation/src/main/resources/datasimulationFlow.conf
+++ b/simulation/src/main/resources/datasimulationFlow.conf
@@ -10,7 +10,7 @@ hdfsFileBatch = {
       dataDirectory = {
         local=  "target/dataslice"
       }
-        readFullDataset = "true"
+        readFullDataset = "false"
         fileFormat=parquet
         groupFile = {
           dateformat = "yyyy-MM-dd HH-mm"
