--- a/dal/pom.xml
+++ b/dal/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.4.4</version>
+            <version>2.6.5</version>
         </dependency>
         <dependency>
             <groupId>org.apache.solr</groupId>
@@ -110,7 +110,7 @@
         <dependency>
             <groupId>com.holdenkarau</groupId>
             <artifactId>spark-testing-base_2.10</artifactId>
-            <version>0.7.3</version>
+            <version>${spark.version}_0.7.4</version>
             <scope>test</scope>
         </dependency>
 
