--- a/dal/pom.xml
+++ b/dal/pom.xml
@@ -47,7 +47,7 @@
         </dependency>
         <dependency>
             <groupId>org.scalaj</groupId>
-            <artifactId>scalaj-http_2.10</artifactId>
+            <artifactId>scalaj-http_${scala.binary.version}</artifactId>
             <version>2.3.0</version>
         </dependency>
         <dependency>
@@ -109,7 +109,7 @@
 
         <dependency>
             <groupId>com.holdenkarau</groupId>
-            <artifactId>spark-testing-base_2.10</artifactId>
+            <artifactId>spark-testing-base_${scala.binary.version}</artifactId>
             <version>${spark.version}_0.7.4</version>
             <scope>test</scope>
         </dependency>
