Spark session changes

--- a/framework/src/main/resources/kafkaStreamWorkFlow.conf
+++ b/framework/src/main/resources/kafkaStreamWorkFlow.conf
@@ -28,21 +28,21 @@ kafkaTopicInfo = {
 }
 
 transactions = [{
-  transactionName = "com.verizon.bda.trapezium.framework.apps.AppETL"
+  transactionName = "com.verizon.bda.trapezium.framework.apps.kafka.AppETL"
   inputStreams = [{
     name: "hdfsStream"
   }]
   persistStreamName = "hdfsFiltered"
   isPersist = "false"
 }, {
-  transactionName = "com.verizon.bda.trapezium.framework.apps.AlgorithmETL"
+  transactionName = "com.verizon.bda.trapezium.framework.apps.kafka.AlgorithmETL"
   inputStreams = [{
     name: "hdfsFiltered"
   }]
   persistStreamName = "hdfsDerived"
   isPersist = "false"
 }, {
-  transactionName = "com.verizon.bda.trapezium.framework.apps.AlgorithmEval"
+  transactionName = "com.verizon.bda.trapezium.framework.apps.kafka.AlgorithmEval"
   inputStreams = [{
     name: "hdfsDerived"
   }]
