Spark session changes

--- a/framework/src/main/resources/kafkaBatchWorkFlow2.conf
+++ b/framework/src/main/resources/kafkaBatchWorkFlow2.conf
@@ -15,19 +15,8 @@ kafkaTopicInfo = {
   batchTime = "5"
   auto.offset.reset = "earliest"
   streamsInfo = [{
-    name = "stream_1"
-    topicName = "stream_1"
-    validation = {
-      columns = ["router","interface","oid","eventdate","elapsetime","inbytes","outbytes"]
-      datatypes = ["String","String","Integer","Date","Long","Double","Double"]
-      dateFormat = "yyyy-MM-dd HH:mm:ss"
-      delimiter = "|"
-      minimumColumn = 7
-      rules = {}
-    }
-  }, {
-    name = "stream_2"
-    topicName = "stream_2"
+    name = "hdfsStream"
+    topicName = "kafkaTopic2"
     validation = {
       columns = ["router","interface","oid","eventdate","elapsetime","inbytes","outbytes"]
       datatypes = ["String","String","Integer","Date","Long","Double","Double"]
@@ -38,32 +27,26 @@ kafkaTopicInfo = {
     }
   }]
 }
+
 transactions = [{
-  transactionName = "com.verizon.bda.trapezium.framework.apps.kafka.KafkaTxn1"
+  transactionName = "com.verizon.bda.trapezium.framework.apps.kafka.AppETL"
   inputStreams = [{
-    name: "stream_1"
+    name: "hdfsStream"
   }]
-  persistStreamName = "filtered_stream_1"
+  persistStreamName = "hdfsFiltered"
   isPersist = "false"
 }, {
-  transactionName = "com.verizon.bda.trapezium.framework.apps.kafka.KafkaTxn1"
+  transactionName = "com.verizon.bda.trapezium.framework.apps.kafka.AlgorithmETL"
   inputStreams = [{
-    name: "stream_2"
+    name: "hdfsFiltered"
   }]
-  persistStreamName = "filtered_stream_2"
+  persistStreamName = "hdfsDerived"
   isPersist = "false"
 }, {
-  transactionName = "com.verizon.bda.trapezium.framework.apps.kafka.KafkaTxn4"
+  transactionName = "com.verizon.bda.trapezium.framework.apps.kafka.AlgorithmEval"
   inputStreams = [{
-    name: "filtered_stream_1"
+    name: "hdfsDerived"
   }]
-  persistStreamName = "final_stream_1"
-  isPersist = "true"
-}, {
-  transactionName = "com.verizon.bda.trapezium.framework.apps.kafka.KafkaTxn5"
-  inputStreams = [{
-    name: "filtered_stream_2"
-  }]
-  persistStreamName = "final_stream_2"
+  persistStreamName = "hdfsAnomalies"
   isPersist = "true"
 }]
