--- a/framework/src/main/resources/kafkaMultipleTopics.conf
+++ b/framework/src/main/resources/kafkaMultipleTopics.conf
@@ -16,7 +16,7 @@ kafkaTopicInfo = {
   auto.offset.reset = "earliest"
   streamsInfo = [{
     name = "stream_1"
-    topicName = "stream_1"
+    topicName = "kafkaMultipleTopics_stream_1"
     validation = {
       columns = ["router","interface","oid","eventdate","elapsetime","inbytes","outbytes"]
       datatypes = ["String","String","Integer","Date","Long","Double","Double"]
@@ -27,7 +27,7 @@ kafkaTopicInfo = {
     }
   }, {
     name = "stream_2"
-    topicName = "stream_2"
+    topicName = "kafkaMultipleTopics_stream_2"
     validation = {
       columns = ["router","interface","oid","eventdate","elapsetime","inbytes","outbytes"]
       datatypes = ["String","String","Integer","Date","Long","Double","Double"]
@@ -39,28 +39,28 @@ kafkaTopicInfo = {
   }]
 }
 transactions = [{
-  transactionName = "com.verizon.bda.trapezium.framework.apps.KafkaTxn1"
+  transactionName = "com.verizon.bda.trapezium.framework.apps.kafka.KafkaTxn1"
   inputStreams = [{
     name: "stream_1"
   }]
   persistStreamName = "filtered_stream_1"
   isPersist = "false"
 }, {
-  transactionName = "com.verizon.bda.trapezium.framework.apps.KafkaTxn1"
+  transactionName = "com.verizon.bda.trapezium.framework.apps.kafka.KafkaTxn1"
   inputStreams = [{
     name: "stream_2"
   }]
   persistStreamName = "filtered_stream_2"
   isPersist = "false"
 }, {
-  transactionName = "com.verizon.bda.trapezium.framework.apps.KafkaTxn2"
+  transactionName = "com.verizon.bda.trapezium.framework.apps.kafka.KafkaTxn2"
   inputStreams = [{
     name: "filtered_stream_1"
   }]
   persistStreamName = "final_stream_1"
   isPersist = "true"
 }, {
-  transactionName = "com.verizon.bda.trapezium.framework.apps.KafkaTxn2"
+  transactionName = "com.verizon.bda.trapezium.framework.apps.kafka.KafkaTxn2"
   inputStreams = [{
     name: "filtered_stream_2"
   }]
