--- a/framework/src/main/resources/kafkaMultipleTopics_wf_2.conf
+++ b/framework/src/main/resources/kafkaMultipleTopics_wf_2.conf
@@ -39,28 +39,28 @@ kafkaTopicInfo = {
   }]
 }
 transactions = [{
-  transactionName = "com.verizon.bda.trapezium.framework.apps.KafkaTxn1"
+  transactionName = "com.verizon.bda.trapezium.framework.apps.kafka.KafkaTxn1"
   inputStreams = [{
     name: "stream_1"
   }]
   persistStreamName = "filtered_stream_1"
   isPersist = "false"
 }, {
-  transactionName = "com.verizon.bda.trapezium.framework.apps.KafkaTxn1"
+  transactionName = "com.verizon.bda.trapezium.framework.apps.kafka.KafkaTxn1"
   inputStreams = [{
     name: "stream_2"
   }]
   persistStreamName = "filtered_stream_2"
   isPersist = "false"
 }, {
-  transactionName = "com.verizon.bda.trapezium.framework.apps.KafkaTxn4"
+  transactionName = "com.verizon.bda.trapezium.framework.apps.kafka.KafkaTxn4"
   inputStreams = [{
     name: "filtered_stream_1"
   }]
   persistStreamName = "final_stream_1"
   isPersist = "true"
 }, {
-  transactionName = "com.verizon.bda.trapezium.framework.apps.KafkaTxn5"
+  transactionName = "com.verizon.bda.trapezium.framework.apps.kafka.KafkaTxn5"
   inputStreams = [{
     name: "filtered_stream_2"
   }]
