--- a/framework/src/main/resources/kafkaPassThroughDefaultsWorkFlow.conf
+++ b/framework/src/main/resources/kafkaPassThroughDefaultsWorkFlow.conf
@@ -17,7 +17,7 @@ kafkaTopicInfo = {
   auto.offset.reset = "earliest"
   streamsInfo = [{
     name = "hdfsStream"
-    topicName = "kafkaTopic"
+    topicName = "topic-kafkaPassThroughDefaultsWorkFlow"
     validation = {
       columns = ["router","interface","oid","eventdate","elapsetime","inbytes","outbytes"]
       datatypes = ["String","String","Integer","Date","Long","Double","Double"]
