--- a/framework/src/main/resources/readJsonFromKafka.conf
+++ b/framework/src/main/resources/readJsonFromKafka.conf
@@ -14,7 +14,7 @@ kafkaTopicInfo = {
 }
 
 transactions = [{
-  transactionName = "com.verizon.bda.trapezium.framework.apps.KafkaTxn3"
+  transactionName = "com.verizon.bda.trapezium.framework.apps.kafka.KafkaTxn3"
   inputStreams = [{
     name = "jsonStream"
   }]
