Changes for failing tests

--- a/framework/src/main/resources/kafkaPassThroughWorkFlow.conf
+++ b/framework/src/main/resources/kafkaPassThroughWorkFlow.conf
@@ -23,7 +23,7 @@ kafkaTopicInfo = {
   }
   streamsInfo = [{
     name = "hdfsStream"
-    topicName = "kafkaTopic"
+    topicName = "kafkaTopic-kafkaPassThroughWorkFlow"
     validation = {
       columns = ["router","interface","oid","eventdate","elapsetime","inbytes","outbytes"]
       datatypes = ["String","String","Integer","Date","Long","Double","Double"]
