--- a/api-akkahttp/example/pom.xml
+++ b/api-akkahttp/example/pom.xml
@@ -16,6 +16,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <junit.version>4.12</junit.version>
+        <trapezium.akkahttp.version>2.0.0-SNAPSHOT</trapezium.akkahttp.version>
     </properties>
     <dependencies>
         <dependency>
@@ -46,14 +47,14 @@
         </dependency>
         <dependency>
             <groupId>com.verizon.trapezium.api</groupId>
-            <artifactId>api</artifactId>
-            <version>1.3.0</version>
+            <artifactId>trapezium-api</artifactId>
+            <version>${trapezium.akkahttp.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.verizon.trapezium.api.akkahttp</groupId>
             <artifactId>api-akkahttp</artifactId>
-            <version>1.3.0</version>
+            <version>${trapezium.akkahttp.version}</version>
         </dependency>
 
         <dependency>
