--- a/api-akkahttp/example/src/main/resources/application.conf
+++ b/api-akkahttp/example/src/main/resources/application.conf
@@ -3,7 +3,7 @@ apisvcs.unsupported.endpoint="{\"status\" : \"error\" , \"msg\"  : \"Page not fo
 apisvcs.failed.request.message="{\"status\" : \"error\" , \"msg\"  : \"request processing failed\"}"
 apisvcs.failed.noauthorizer.message="{\"status\" : \"error\" , \"msg\"  : \"request processing failed no valid authorizer\"}"
 apisvcs.examplesvcs.endpoint.topublish="samplesvcs"
-apisvcs.examplesvcs.route.authorizer="federated"
+apisvcs.examplesvcs.route.authorizer="Federated"
 apisvcs.examplesvcs.bindingport=7722
 apisvcs.akka.http.port = 7722
 apisvcs.endpoint.examplesvcs.resource="sample"
