--- a/dal/pom.xml
+++ b/dal/pom.xml
@@ -36,7 +36,16 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.sshd</groupId>
+            <artifactId>sshd-core</artifactId>
+            <version>1.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>sshtools</groupId>
+            <artifactId>j2ssh-core</artifactId>
+            <version>0.2.2</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.solr</groupId>
