--- a/authorization/src/main/resources/application.conf
+++ b/authorization/src/main/resources/application.conf
@@ -1,3 +1,1 @@
-cbc.url = "http://bda-cbs.verizon.com:8091/pools"
-cbc.default.bucket = "default"
-cbc.default.pwd = ""
+#Authorization configurations
