--- a/dal/pom.xml
+++ b/dal/pom.xml
@@ -48,6 +48,11 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20160810</version>
+        </dependency>
+        <dependency>
             <groupId>org.scalaj</groupId>
             <artifactId>scalaj-http_2.10</artifactId>
             <version>2.3.0</version>
