solr ha bug fixes

--- a/dal/src/main/resources/sample.conf
+++ b/dal/src/main/resources/sample.conf
@@ -1,9 +1,9 @@
 solr{
-  zkhosts = "istgbd019.verizon.com:2181"
-  zroot = "/solr6"
+  zkhosts = "ma-amxdev-4.verizon.com:2181,ma-amxdev-5.verizon.com:2181,ma-amxdev-2.verizon.com:2181"
+  zroot = "/solr651"
   index_folder_prefix = "/part-"
-  disks="/data0"
-  node_ssh_user="poosave"
+  disks="/data0,/data1,/data2"
+  node_ssh_user="amx_test"
   nameNode = "nameservice1",
-  allowedsNodesFailurePercent="100"
+  clusterCapacity=99
 }
