--- a/api-akkahttp/pom.xml
+++ b/api-akkahttp/pom.xml
@@ -55,7 +55,7 @@
         <dependency>
             <groupId>com.verizon.trapezium.api</groupId>
             <artifactId>trapezium-api</artifactId>
-            <version>1.3.1</version>
+            <version>${trapezium.version}</version>
         </dependency>
         <dependency>
             <groupId>org.scalatest</groupId>
