--- a/api/pom.xml
+++ b/api/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>com.verizon.trapezium.api</groupId>
     <artifactId>trapezium-api</artifactId>
-    <version>1.3.1</version>
+    <version>${trapezium.version}</version>
    <name>Trapezium api library</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
