--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -71,7 +71,7 @@
                 <dependency>
                     <groupId>com.verizon.bda</groupId>
                     <artifactId>trapezium-license</artifactId>
-					<version>1.3.1</version>
+					<version>${trapezium.version}</version>
                 </dependency>
             </dependencies>
 			<build>
