--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.verizon.bda</groupId>
   <artifactId>trapezium-parent</artifactId>
+  <!--NOTE: While changing the version Also update the property trapezium.version below in the properties  -->
   <version>1.3.3</version>
   <packaging>pom</packaging>
   <name>Verizon BDA Trapezium Parent POM</name>
@@ -25,7 +26,7 @@
   </modules>
   
   <properties>
-    <trapezium.version>1.3.1</trapezium.version>
+    <trapezium.version>1.3.3</trapezium.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>1.8</java.version>
