--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.verizon.bda</groupId>
 		<artifactId>trapezium-parent</artifactId>
-		<version>1.3.1</version>
+		<version>2.0.0</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
         
@@ -15,26 +15,32 @@
 	<name>Trapezium framework library</name>
 
 	<properties>
-		<kafka.version>0.8.2.1</kafka.version>
+		<kafka.version>0.10.2.0</kafka.version>
 		<compiler.plugin.version>3.1</compiler.plugin.version>
 		<scoverage.plugin.version>1.0.0</scoverage.plugin.version>
 		<couch.mock.version>1.4.3</couch.mock.version>
 	</properties>
 
-    <profiles>
-        <profile>
-            <id>verizon</id>
+	<profiles>
+		<profile>
+			<id>verizon</id>
 
-            <properties>
-                <profile_name>verizon</profile_name>
-            </properties>
-            <dependencies>
-                <dependency>
-                    <groupId>com.verizon.bda</groupId>
-                    <artifactId>license</artifactId>
-                    <version>0.1.0</version>
-                </dependency>
-            </dependencies>
+			<properties>
+				<profile_name>verizon</profile_name>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>com.verizon.bda</groupId>
+					<artifactId>license</artifactId>
+					<version>0.1.0</version>
+					<exclusions>
+						<exclusion>
+							<groupId>com.vz.logger</groupId>
+							<artifactId>BDALogger</artifactId>
+						</exclusion>
+					</exclusions>
+				</dependency>
+			</dependencies>
 			<build>
 				<plugins>
 					<plugin>
@@ -58,22 +64,28 @@
 
 				</plugins>
 			</build>
-        </profile>
-        <profile>
-            <id>opensource</id>
+		</profile>
+		<profile>
+			<id>opensource</id>
 			<activation>
 				<activeByDefault>true</activeByDefault>
 			</activation>
-            <properties>
-                <profile_name>opensource</profile_name>
-            </properties>
-            <dependencies>
-                <dependency>
-                    <groupId>com.verizon.bda</groupId>
-                    <artifactId>trapezium-license</artifactId>
-					<version>1.3.1</version>
-                </dependency>
-            </dependencies>
+			<properties>
+				<profile_name>opensource</profile_name>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>com.verizon.bda</groupId>
+					<artifactId>trapezium-license</artifactId>
+					<version>${trapezium.version}</version>
+					<exclusions>
+						<exclusion>
+							<groupId>com.vz.logger</groupId>
+							<artifactId>BDALogger</artifactId>
+						</exclusion>
+					</exclusions>
+				</dependency>
+			</dependencies>
 			<build>
 				<plugins>
 					<plugin>
@@ -97,34 +109,79 @@
 
 				</plugins>
 			</build>
-        </profile>
-    </profiles>
+		</profile>
+	</profiles>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.apache.parquet</groupId>
+			<artifactId>parquet-hadoop</artifactId>
+			<version>${parquet.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.parquet</groupId>
+			<artifactId>parquet-column</artifactId>
+			<version>${parquet.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
-			<version>20180130</version>
+			<version>20170516</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-core_${scala.binary.version}</artifactId>
+			<version>${spark.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.parquet</groupId>
+					<artifactId>parquet-column</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.spark</groupId>
-			<artifactId>spark-core_${scala.binary.version}</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-hive_${scala.binary.version}</artifactId>
 			<version>${spark.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.twitter</groupId>
+					<artifactId>parquet-hadoop-bundle</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
+
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-streaming_${scala.binary.version}</artifactId>
+			<version>${spark.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-sql_${scala.binary.version}</artifactId>
+			<version>${spark.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.parquet</groupId>
+					<artifactId>parquet-hadoop-bundle</artifactId>
+				</exclusion>
+
+				<exclusion>
+					<groupId>org.apache.parquet</groupId>
+					<artifactId>parquet-column</artifactId>
+				</exclusion>
+
+				<exclusion>
+					<groupId>org.apache.spark</groupId>
+					<artifactId>spark-catalyst</artifactId>
+				</exclusion>
+
+			</exclusions>
+
 		</dependency>
 
 		<dependency>
@@ -141,7 +198,7 @@
 
 		<dependency>
 			<groupId>org.apache.kafka</groupId>
-			<artifactId>kafka_2.10</artifactId>
+			<artifactId>kafka_2.11</artifactId>
 			<version>${kafka.version}</version>
 			<exclusions>
 				<exclusion>
@@ -150,46 +207,45 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<dependency>
-			<groupId>org.apache.spark</groupId>
-			<artifactId>spark-streaming-kafka_${scala.binary.version}</artifactId>
-			<version>${spark.version}</version>
-			<scope>provided</scope>
-		</dependency>
 
 		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-servlet</artifactId>
-			<version>9.2.16.v20160414</version>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-streaming-kafka-0-10_${scala.binary.version}</artifactId>
+			<version>${spark.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.databricks</groupId>
-			<artifactId>spark-avro_2.10</artifactId>
-			<version>2.0.1</version>
+			<artifactId>spark-avro_${scala.binary.version}</artifactId>
+			<version>3.2.0</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.typesafe.akka</groupId>
-			<artifactId>akka-http-experimental_2.10</artifactId>
+			<artifactId>akka-http-experimental_${scala.binary.version}</artifactId>
 			<version>2.0.4</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.typesafe.akka</groupId>
-			<artifactId>akka-http-spray-json-experimental_2.10</artifactId>
+			<artifactId>akka-http-spray-json-experimental_${scala.binary.version}</artifactId>
 			<version>2.0.4</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.typesafe.akka</groupId>
-			<artifactId>akka-http-testkit-experimental_2.10</artifactId>
+			<artifactId>akka-http-testkit-experimental_${scala.binary.version}</artifactId>
 			<version>2.0.4</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.verizon.bda</groupId>
 			<artifactId>trapezium-couchbase-store</artifactId>
+			<version>${trapezium.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.verizon.bda</groupId>
+			<artifactId>trapezium-license</artifactId>
 			<version>${trapezium.version}</version>
 		</dependency>
 
@@ -200,6 +256,12 @@
 			<type>test-jar</type>
 			<version>${trapezium.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.verizon.bda</groupId>
+			<artifactId>trapezium-cache</artifactId>
+			<version>2.0.0-SNAPSHOT</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
