--- a/cassandra-dao/pom.xml
+++ b/cassandra-dao/pom.xml
@@ -5,7 +5,7 @@
     <parent>
       <groupId>com.verizon.bda</groupId>
       <artifactId>trapezium-parent</artifactId>
-        <version>2.0.0</version>
+        <version>2.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
