--- a/couchbase-store/pom.xml
+++ b/couchbase-store/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>trapezium-parent</artifactId>
         <groupId>com.verizon.bda</groupId>
-        <version>2.0.0</version>
+        <version>2.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -13,7 +13,7 @@
     <artifactId>trapezium-couchbase-store</artifactId>
     
     <properties>
-        <cache.version>2.0.0</cache.version>
+        <cache.version>2.0.0-SNAPSHOT</cache.version>
         <couch.client.version>1.4.5</couch.client.version>
         <couch.mock.version>1.4.3</couch.mock.version>
         <typesafe.version>1.2.1</typesafe.version>
