--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.verizon.bda</groupId>
 		<artifactId>trapezium-parent</artifactId>
-		<version>2.0.0</version>
+		<version>2.0.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
         
@@ -259,7 +259,7 @@
 		<dependency>
 			<groupId>com.verizon.bda</groupId>
 			<artifactId>trapezium-cache</artifactId>
-			<version>2.0.0-SNAPSHOT</version>
+			<version>${trapezium.version}</version>
 		</dependency>
 
 	</dependencies>
