PLMR-5238 moved to spark 2.3 and scala 2.11

--- a/dal/pom.xml
+++ b/dal/pom.xml
@@ -43,7 +43,7 @@
         </dependency>
         <dependency>
             <groupId>com.github.scopt</groupId>
-            <artifactId>scopt_2.10</artifactId>
+            <artifactId>scopt_${scala.binary.version}</artifactId>
             <version>3.4.0</version>
         </dependency>
         <dependency>
