--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -23,6 +23,7 @@
 
 	<profiles>
 		<profile>
+
 			<id>verizon</id>
 
 			<properties>
@@ -214,6 +215,12 @@
 			<version>${spark.version}</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
+		<dependency>
+			<groupId>org.apache.kafka</groupId>
+			<artifactId>kafka-clients</artifactId>
+			<version>${kafka.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>com.databricks</groupId>
 			<artifactId>spark-avro_${scala.binary.version}</artifactId>
