--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
 		</pluginRepository>
 	</pluginRepositories>
 	<dependencies>
+      <dependency>
+        <groupId>org.scala-lang</groupId>
+        <artifactId>scala-library</artifactId>
+        <version>${scala.version}</version>
+      </dependency>
     <dependency>
       <groupId>org.scalatest</groupId>
       <artifactId>scalatest_${scala.binary.version}</artifactId>
