--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -236,19 +236,19 @@
 		<dependency>
 			<groupId>com.typesafe.akka</groupId>
 			<artifactId>akka-http_${scala.binary.version}</artifactId>
-			<version>10.0.4</version>
+			<version>${akka.http.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.typesafe.akka</groupId>
 			<artifactId>akka-http-spray-json_${scala.binary.version}</artifactId>
-			<version>10.0.4</version>
+			<version>${akka.http.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.typesafe.akka</groupId>
 			<artifactId>akka-http-testkit_${scala.binary.version}</artifactId>
-			<version>10.0.4</version>
+			<version>${akka.http.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
