--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
     <scoverage.plugin.version>1.1.1</scoverage.plugin.version>
     <hadoop.deps.scope>compile</hadoop.deps.scope>
     <parquet.deps.scope>compile</parquet.deps.scope>
+      <akka.http.version>10.0.4</akka.http.version>
     <test.java.home>${java.home}</test.java.home>
 
     <PermGen>64m</PermGen>
