Fixed test cases

--- a/framework/src/main/resources/dropRowWithExtraColumn.conf
+++ b/framework/src/main/resources/dropRowWithExtraColumn.conf
@@ -6,7 +6,7 @@ hdfsFileBatch = {
   timerStartDelay = 1
   batchInfo = [
     {
-      name = "onlyDirTrue"
+      name = "source1"
       dataDirectory = {
         local ="src/test/data/hdfs/source6/"
         dev = "/midm/"
@@ -30,7 +30,7 @@ hdfsFileBatch = {
 transactions = [{
   transactionName = "com.verizon.bda.trapezium.framework.apps.TestBatchTxn9"
   inputData = [{
-    name = "onlyDirTrue"
+    name = "source1"
   }]
   persistDataName = "testOutput2"
 }]
