--- a/framework/src/main/resources/onlyDirTrue.conf
+++ b/framework/src/main/resources/onlyDirTrue.conf
@@ -12,7 +12,7 @@ hdfsFileBatch = {
         dev = "/midm/"
         prod = ""
       }
-      readFullDataset = "false"
+      readFullDataset = "true"
       validation = {
         columns = ["starttime","duration","subscriberid","destinationip","httpmethod","httphost","httpuri","httpuseragent","httpcontenttype","httpresponsecode","httpcontentlength","upstream_data","downstream_data","deviceid","network_type","ran_type","region_location","base_station_location","do_not_track","privacy"]
         datatypes = ["Long","Integer","String","String","String","String","String","String","String","String","String","String","String","String","String","String","String","String","String","String"]
