--- a/framework/src/main/resources/readByOffset.conf
+++ b/framework/src/main/resources/readByOffset.conf
@@ -22,8 +22,8 @@ hdfsFileBatch = {
         }
       #split file into day. Processing file daywise.
       groupFile = {
-        dateformat = "yyyy-MM-dd"
-        regexFile="(19|20)\\d\\d[- /.](0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])"
+        dateformat = "yyyyMMddHHmmss"
+        regexFile="(19|20)\\d\\d(0[1-9]|1[012])(0[1-9]|[12][0-9]|3[01])"
         offset=-8640
       }
       validation = {
