--- a/framework/src/main/resources/readByOffset2Source.conf
+++ b/framework/src/main/resources/readByOffset2Source.conf
@@ -22,9 +22,9 @@ hdfsFileBatch = {
         }
       #split file into day. Processing file daywise.
       groupFile = {
-        dateformat = "yyyy-MM-dd"
+        dateformat = "yyyyMMddHHmmss"
         startDateIndex = 9
-        endDateIndex = 19
+        endDateIndex = 23
         offset=-8640
       }
       validation = {
@@ -48,9 +48,9 @@ hdfsFileBatch = {
       }
       #split file into day. Processing file daywise.
       groupFile = {
-        dateformat = "yyyy-MM-dd"
+        dateformat = "yyyyMMddHHmmss"
         startDateIndex = 9
-        endDateIndex = 19
+        endDateIndex = 23
         offset=-8640
       }
       validation = {
