--- a/framework/src/main/resources/testWorkFlow1.conf
+++ b/framework/src/main/resources/testWorkFlow1.conf
@@ -22,7 +22,15 @@ hdfsFileBatch = {
         saiph-devqa = "/midm/"
         prod = ""
       }
-      readFullDataset = "false"
+      validation = {
+        columns = ["singleLine"]
+        datatypes = ["String"]
+        dateFormat = "yyyy-MM-dd HH:mm:ss"
+        delimiter = "|"
+        minimumColumn = 1
+        rules = {}
+      }
+      readFullDataset = "true"
     }
   ]
 }
