--- a/framework/src/main/resources/testWorkFlow3.conf
+++ b/framework/src/main/resources/testWorkFlow3.conf
@@ -18,7 +18,7 @@ hdfsFileBatch = {
     {
       name = "source1"
       dataDirectory = {
-        local = "src/test/data/hdfs/source6"
+        local = "src/test/data/hdfs/source1"
         dev = "/midm/"
         prod = ""
       }
@@ -38,6 +38,7 @@ hdfsFileBatch = {
         sources = ["src/main/resources/sample.properties"]
         defaultValues=["sample"]
       }
+      readFullDataset = "true"
     }
   ]
 }
