--- a/api-akkahttp/example/pom.xml
+++ b/api-akkahttp/example/pom.xml
@@ -46,13 +46,13 @@
         <dependency>
             <groupId>com.verizon.trapezium.api</groupId>
             <artifactId>api</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.0</version>
         </dependency>
 
         <dependency>
             <groupId>com.verizon.trapezium.api.akkahttp</groupId>
             <artifactId>api-akkahttp</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.0</version>
         </dependency>
 
         <dependency>
