--- a/api-akkahttp/pom.xml
+++ b/api-akkahttp/pom.xml
@@ -6,13 +6,13 @@
     <parent>
         <groupId>com.verizon.bda</groupId>
         <artifactId>trapezium-parent</artifactId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>2.0.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <groupId>com.verizon.trapezium.api.akkahttp</groupId>
     <artifactId>api-akkahttp</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
    <name>Trapezium akka http api services</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -54,7 +54,7 @@
         <dependency>
             <groupId>com.verizon.trapezium.api</groupId>
             <artifactId>trapezium-api</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.scalatest</groupId>
