--- a/screwdriver.yaml
+++ b/screwdriver.yaml
@@ -28,5 +28,5 @@ jobs:
       - build: |
            cat ~/.m2/settings.xml
            # Build failed with tests execution, skip tests until resolve
-           #mvn -U clean deploy -DskipTests
-           mvn -U clean install -DskipTests
+           #mvn -U clean install -DskipTests
+           mvn -U clean deploy -DskipTests
