--- a/dal/pom.xml
+++ b/dal/pom.xml
@@ -209,7 +209,7 @@
                 </snapshots>
                 <id>bintray-yahoo-maven</id>
                 <name>bintrary</name>
-                <url>http://md-bdadev-3.verizon.com:8081/artifactory/bintrary</url>
+                <url></url>
             </repository>
     </repositories>
 </project>
