--- a/framework/src/test/resources/local-https-server.conf
+++ b/framework/src/test/resources/local-https-server.conf
@@ -4,8 +4,8 @@ httpServer = {
   provider = "akka"
   enableHttps = true
   oathEnv = false
-  certPath = "./certificate.pem"
-  keyPath = "./key.pem"
+  certPath = "<certificate file>"
+  keyPath = "<key pem file>"
   trustStorePath = ""
   trustStorePassword = ""
   port = 9999
