--- a/framework/src/test/resources/local_cache.conf
+++ b/framework/src/test/resources/local_cache.conf
@@ -2,10 +2,10 @@ commons.cache.impl="com.verizon.bda.trapezium.store.cache.mock.MockCacheCBImpl"
 cbc.url= "http://localhost:60591/pools"
 #rest-cache
 cbc.pcache.bucket=rest
-cbc.pcache.pwd=pwd
+cbc.pcache.pwd=
 #global app cache
 default.app.name="GlobalApps"
-cbc.gcache.pwd= ""
+cbc.gcache.pwd=
 commons.cache.keyNotFound ="Key can not be null"
 commons.cache.wrongParams ="For Couch base we need to have either zero ot 2 arguements"
 commons.cache.retryCount=3
