--- a/framework/src/main/resources/couch.conf
+++ b/framework/src/main/resources/couch.conf
@@ -4,7 +4,7 @@ cbc.pcache.bucket=t11
 cbc.pcache.pwd=""
 #global app cache
 default.app.name="GlobalApps"
-cbc.gcache.pwd= ""
+cbc.gcache.pwd=
 commons.cache.impl="com.verizon.bda.trapezium.cache.couchbase.CouchBaseStoreImpl"
 commons.cache.keyNotFound ="Key can not be null"
 commons.cache.wrongParams ="For Couch base we need to have either zero ot 2 arguements"
