--- a/couchbase-store/src/main/resources/cache.conf
+++ b/couchbase-store/src/main/resources/cache.conf
@@ -1,11 +1,10 @@
 cbc.url= "http://localhost:8091/pools"
 #rest-cache
 cbc.pcache.bucket=b1
-cbc.pcache.pwd=""
-#global app cache
+cbc.pcache.psswd=
 #global app cache
 default.app.name="GlobalApps"
-cbc.gcache.pwd= ""
+cbc.gcache.psswd=
 commons.cache.impl= "com.verizon.bda.trapezium.store.CouchBaseStoreImpl"
 commons.cache.keyNotFound ="Key can not be null"
 commons.cache.wrongParams ="For Couch base we need to have either zero ot 2 arguements"
